[tool.poetry]
name = "rcd"
version = "0.1.1"
description = "Recursive causal discovery framework"
authors = ["sepehr78 <elahisepehr@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
networkx = "^3.2.1"
numpy = "^1.26.4"
pandas = "^2.2.0"
scipy = "^1.12.0"
tqdm = "^4.66.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
