[tool.poetry]
name = "rcd"
version = "0.1.3"
description = "Recursive causal discovery framework"
authors = ["sepehr78 <elahisepehr@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
networkx = "^3.2.1"
numpy = "^1.26"
pandas = "^2.2"
scipy = "^1.13"
tqdm = "^4.66"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.1"
mkdocs = "^1.5.3"
mkdocs-material = "^9.5.10"
mkdocstrings = {extras = ["python"], version = "^0.24.0"}
mkdocs-section-index = "^0.3.8"
h5py = "^3.10.0"
joblib = "^1.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
