[tool.poetry]
name = "rcd"
version = "0.2.1"
description = "Recursive causal discovery framework"
authors = ["sepehr78 <elahisepehr@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
networkx = "^3.4"
numpy = "^2"
pandas = "^2"
scipy = "^1"
tqdm = "^4"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.1"
mkdocs = "^1.5.3"
mkdocs-material = "^9.5"
mkdocstrings = {extras = ["python"], version = "^0.27"}
mkdocs-section-index = "^0.3"
h5py = "^3.10.0"
joblib = "^1.3.2"
matplotlib = "^3.4.3"
seaborn = "^0.13"

[tool.poetry.group.simulations]
optional = true

[tool.poetry.group.simulations.dependencies]
pgmpy = "^0.1.26"
dagma = "^1.1.0"
JPype1 = "^1.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
